# teddyshop

./: .bazelrc  BUILD  READMD.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-teddyshop  bazel-testlogs  ci.sh  go.mod  go.sum  go_vendor.bzl
apis/billing/cmd/api-server/: BUILD.bazel
apis/identities/cmd/api-server/: BUILD.bazel  main.go
apis/orders/cmd/api-server/: BUILD.bazel
apps/buildfloor/cmd/serve/: BUILD.bazel
apps/shopfloor/cmd/serve/: BUILD.bazel
hack/: compile_go_proto.sh  update_godeps.sh
spec/: .gitignore
spec/identities/v1/: BUILD.bazel  auth.proto
