load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/go-cqrses/teddyshop/apis/identities/cmd/api-server",
    visibility = ["//visibility:private"],
    deps = [
        "//spec/identities/v1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_binary(
    name = "api-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
